fixed horizontal scrolling & project structure

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,14 @@
-body, h1, h2, h3 {
+body, 
+h1, 
+h2, 
+h3 {
 	font-family: 'Roboto Condensed', sans-serif;
 	font-weight: 700px;
 }
 
-h1, h2, h3{
+h1, 
+h2, 
+h3 {
     font-size: 2.5rem;
 }
 
@@ -37,11 +42,13 @@ header.masthead {
 
 }
 
-.showcase .showcase-text {
+.showcase 
+.showcase-text {
     padding: 3rem
 }
 
-.showcase .showcase-img {
+.showcase 
+.showcase-img {
     min-height: 30rem;
     background-size: cover
 }
@@ -58,23 +65,32 @@ header.masthead {
     padding-bottom: 7rem
 }
 
-.features-icons .features-icons-item {
+.features-icons 
+.features-icons-item {
     max-width: 20rem
 }
 
-.features-icons .features-icons-item .features-icons-icon {
+.features-icons 
+.features-icons-item 
+.features-icons-icon {
     height: 7rem
 }
 
-.features-icons .features-icons-item .features-icons-icon i {
+.features-icons 
+.features-icons-item 
+.features-icons-icon 
+i {
     font-size: 4.5rem
 }
 
-.features-icons .features-icons-item:hover .features-icons-icon i {
+.features-icons 
+.features-icons-item:hover 
+.features-icons-icon 
+i {
     font-size: 6rem
 }
 
-.list-inline-item:hover{
+.list-inline-item:hover {
   font-size: 1.1rem;
 }
 
@@ -83,6 +99,21 @@ footer.footer {
     padding-bottom: 4rem
 }
 
-.center{
-        background: no-repeat center; 
+#showcase-img-1 {
+    background-image: url('../img/code.jpg');
 }
+
+#showcase-img-2 {
+    background-image: url('../img/Udacity_logo.png');
+}
+
+#showcase-img-3 {
+    background-image: url('../img/database.png');
+}
+
+.center {
+        background: no-repeat center center; 
+}
+
+
+
